--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class='row'>
-      <%= render 'meta' %>
+      <%= render 'meta', question: question %>
     </div>
   </div>
   <div class='span9 line'></div>
