--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -15,7 +15,8 @@
 }
 
 .item .avatar, .avatar {
-    margin: 7px;
+    margin-top: 7px;
+    margin-bottom: 7px;
 }
 
 .item .title{
@@ -72,6 +73,10 @@ a {
     color: #1ABC9C;
     text-decoration: none;
     transition: none;
+}
+
+.navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+    width: 960px;
 }
 
 @media (min-width: 1000px) {    
