--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,15 +1,17 @@
 <div class='row'>
-  <div class="span7">
+  <div class="span6">
     <h3><%= @group.name %></h3>
     <p><%= @group.body %></p>
   </div>
   
-  <div class='span2 pull-right'>  
+  <div class='span3 pull-right'>  
     <%- if @group_member %>
-      <%= link_to "添加话题", new_group_group_topic_path(@group), class: 'btn btn-info pull-right span' %>
-      <%= link_to "共享文件", new_group_group_medium_path(@group), class: 'btn btn-sucess pull-right span' %>
+      <%= render 'actions' %>
     <% else %>
-      <%= link_to "申请加入", apply_group_path(@group), remote: true, class: 'btn btn-info pull-right' %>
+      <p><%= link_to "申请加入", apply_group_path(@group), remote: true, class: 'btn btn-info pull-right' %></p>
     <% end %>
+    <br class='clearfix' /><br />
+    <p>共<%= @group.groups_members_count %>个成员</p>
+
   </div>
 </div>
