--- a/app/views/group/posts/index.html.erb
+++ b/app/views/group/posts/index.html.erb
@@ -1,1 +1,24 @@
-<%= render @posts %>
+<div class="btn-group pull-right">
+  <button data-toggle="dropdown" class="span btn btn-info dropdown-toggle">添加话题 <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><b>请您先选择分类</b></li>
+    <%- @group.categories.each do |category| %>
+      <li><%= link_to category.name, new_group_group_category_post_path(@group, category) %></li>
+    <% end %>
+  </ul>
+</div>
+<table class='table content'>
+  <thead>
+    <tr>
+      <th>话题</th>
+      <th>作者</th>
+      <th>阅读</th>
+      <th>回复</th>
+      <th>最后更新时间</th>
+    </tr>
+  </thead>
+  <tbody>
+    <%# @topics.inspect %>
+    <%= render partial: 'post', collection: @posts, as: :post %>
+  </tbody>
+</table>
