--- a/app/views/group/folders/index.html.erb
+++ b/app/views/group/folders/index.html.erb
@@ -1,13 +1,2 @@
-<div class='span8'>
-
-</div>
-
-<div class="span2">
-	<br class="clear" />
-	<p>
-		<%= link_to "上传文档", new_group_document_path(@current_group), :class => "btn primary"%>
-	</p>
-	<br class="clear" />
-	<h4>分类</h4>
-	<h4>标签</h4>
-</div>
+<%= render 'me/media/nav' %>
+<%= render 'media', media: @media %>
