--- a/app/views/group/media/_form.html.erb
+++ b/app/views/group/media/_form.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag "jquery-fileupload" %>
 
 <div class='content'>
-  <%= form_for [:me, @folder, @folder, @medium], :html => { :multipart => true, :id => "fileupload"  } do |f| %>
+  <%= form_for [:group, @group, @folder, @medium], :html => { :multipart => true, :id => "fileupload"  } do |f| %>
     <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
     <div class="row fileupload-buttonbar">
       <div class="span7">
