--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <%= tabs_tag(:namespace => :site_nav, :open_tabs => {:id => "site_nav", :class => "nav" }, :builder => MenuTabBuilder) do |tab| %>
-  <%= tab.index '我的空间', root_path %>
+  <%= tab.index user_signed_in? ? '我的空间' : '首页', root_path %>
   <%= tab.share '分享', posts_path %>
   <%= tab.question '问答', questions_path %>
   <%= tab.course '课程', courses_path %>
@@ -7,6 +7,6 @@
   <%= tab.team '班级', groups_path %>
 <% end %>
 <form class="navbar-search pull-left">
-  <input type="text" class="search-query" placeholder="Search">
+  <input type="text" class="search-query" placeholder="输入您感兴趣的关键字">
 </form>
 
