--- a/app/views/course/_nav.html.erb
+++ b/app/views/course/_nav.html.erb
@@ -3,13 +3,9 @@
   <%= tab.slots "课时", course_course_sections_path(@course) %>
   <%= tab.discusses "讨论", course_course_discusses_path(@course) %>
   <%= tab.members "学员", course_course_members_path(@course) %>
-
   <%- if current_user.can_admin_course?(@course) %>
-    <%= tab.admin "管理", admin_course_path(@course) %>
+    <%= tab.admin "管理", admin_course_course_settings_path(@course) %>
   <% end %>
-  
-  <%= link_to "添加章节", new_course_course_section_path(@course), class: 'btn btn-info pull-right span' %>
-
   <%- if @course_member %>
     <%= link_to "发起讨论", new_group_group_topic_path(@group), class: 'btn btn-info pull-right span' %>
     <%＃ link_to "共享文件", new_group_group_medium_path(@group), class: 'btn btn-sucess pull-right span' %>
