--- a/app/views/layouts/_account.html.erb
+++ b/app/views/layouts/_account.html.erb
@@ -1,7 +1,7 @@
 <ul id="account" class="nav pull-right">
 	<%-if user_signed_in? %>
 	<li>
-		<%=link_to '我的主页', me_path %>
+		<%=link_to '我的主页', current_user %>
 	</li>
 	<li>
 		<%= link_to '个人设置', me_settings_path %>
