--- a/app/views/layouts/course.html.erb
+++ b/app/views/layouts/course.html.erb
@@ -4,22 +4,21 @@
     <%= render 'layouts/head' %>
   </head>
   <body>
-
     <%= render "layouts/header" %>
-    <div class="page container">
-      <div class='left'>
-        <%= image_tag avatar_url(@course) %>
-        <h3><%= @course.name %></h3>
-        <p><%= @course.body %></p>
-      </div>
+    <div id="page" class="container">
+      <div class="row">
+        <div class='span-l'>
+          <div class='avatar'><%= link_to image_tag(avatar_url(@course, 'b')), @course %></div>
+          <h4><%= @course.name %></h4>
+        </div>
 
-      <div class='right'>
-        <%= bootstrap_flash %>
-        <%= render 'course/nav' %>
-        <%= yield %>
+        <div class='span-r'>
+          <%= render 'course/nav' %>
+          <%= bootstrap_flash %>
+          <%= yield %>
+        </div>
       </div>
-
     </div> <!-- /container -->
-    <%= render 'footer' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
