--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -7,12 +7,13 @@
     <%= render "layouts/header" %>
     <div id="page" class="container">
       <div class="row">
-        <div class='span2'>
+        <div class='span-l'>
           <div class='avatar'><%= link_to image_tag(avatar_url(@group, 'b')), @group %></div>
-          <%= render 'group/nav' %>
+          <h4><%= @group.name %></h4>
         </div>
 
-        <div class='span10'>
+        <div class='span-r'>
+          <%= render 'group/nav' %>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
