--- a/app/views/layouts/me.html.erb
+++ b/app/views/layouts/me.html.erb
@@ -8,11 +8,11 @@
     <div id="page" class="container">
       <div class="row">
         <%= bootstrap_flash %>
-        <div class='span2'>
+        <div class='span-l'>
           <%= render 'users/profile' %>
           <%= render 'me/menu' %>
         </div>
-        <div class='span10'>
+        <div class='span-r'>
           <%= yield %>
         </div>
       </div>
