--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -33,9 +33,11 @@
 div.field_with_errors .message {
     background-color: #B94A48;
     color: #ffe;
-    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
     border-radius: 3px 3px 3px 3px;
-    padding: 3px;    
+    padding: 4px;    
+    font-size: 11px;
 }
 
 div.field_with_errors, div.ui-effects-wrapper {
@@ -44,6 +46,10 @@ div.field_with_errors, div.ui-effects-wrapper {
   margin-left: 10px;
 }
 
+.nav-tabs.nav-stacked > li > a {
+    border: 1px solid #DDDDDD;
+    border-radius: 0 0 0 0;
+}
 
 .navbar-inner {
     background-color: #fff;
