--- a/app/views/course/_nav.html.erb
+++ b/app/views/course/_nav.html.erb
@@ -1,7 +1,7 @@
 <%= tabs_tag(:namespace => :course_nav, :open_tabs => {:class => "nav nav-tabs"}, :builder => MenuTabBuilder) do |tab| %>
   <%= tab.index "主页", @course %>
   <%= tab.slots "课时", course_course_sections_path(@course) %>
-  <%= tab.discusses "讨论", course_course_discusses_path(@course) %>
+  <%= tab.discusses "笔记", course_course_posts_path(@course) %>
   <%= tab.members "学员", course_course_members_path(@course) %>
   <%- if current_user.can_admin_course?(@course) %>
     <%= tab.admin "管理", admin_course_course_settings_path(@course) %>
