--- a/app/views/course/sections/_form.html.erb
+++ b/app/views/course/sections/_form.html.erb
@@ -1,20 +1,5 @@
-<table class='table content'>
-  <thead>
-    <tr>
-      <th></th>
-      <th>名称</th>
-      <th>课时数量</th>  
-      <th>操作</th>
-    </tr>
-  </thead>
-  <tbody id='section-list'>
-    <%= render @course.sections %>
-  </tbody>
-</table>
-<%= simple_form_for @section, url: course_course_sections_path(@course), remote: true, html: {class: 'form-stacked', data: {type: "script", method: :post} } do |f| -%> 
-  <%= f.error_notification %>
-  <%= f.input :title, :label => '名称' %>
-  <div class="actions">
-    <%= f.submit '创建', :class=>'btn btn-primary' %>
-  </div>
+<%= form_for @section, url: course_course_sections_path(@course), remote: true, validate: true, html: {class: 'form', id: 'section-form', data: {type: "script", method: :post} } do |f| -%> 
+  <%= f.text_field :title, :label => '名称' %>
+  <%= f.submit '添加章节', :class=>'btn btn-primary', disable_with: "正在提交..." %>
 <% end %>
+
