--- a/app/views/course/sections/admin.html.erb
+++ b/app/views/course/sections/admin.html.erb
@@ -1,6 +1,22 @@
-<div class='span7'>
-  <%= render 'form' %>
+<div class='row'>
+  <div class='span6'>
+    <%= @sections.each do |section| %>
+      <ul class="nav nav-tabs">
+        <li>
+          <h3><%= section.title %></h3>
+        </li>
+        <li class='pull-right'>
+          <%= link_to '添加课程', new_course_course_section_slot_path(@course, section), remote: true, data: {type: "script"} %>
+        </li>
+      </ul>
+      <%= render partial: 'slots', collection: section.slots %>
+    <% end %>
+  </div>
+  <div class='span3 pull-right'>
+    <%= render 'form' %>
+    <%= render 'list' %>
+  </div>
 </div>
-<div class='span2 pull-right'>
-  <%= render 'course/admin_nav' %>
-</div>
+<%= content_for :left do %>
+  <%= render 'course/settings/nav' %>
+<% end %>
