--- a/app/views/course/sections/create.js.erb
+++ b/app/views/course/sections/create.js.erb
@@ -1,1 +1,3 @@
-$('#section-list').append("<%= escape_javascript render('section', locals: {section: @section}, section: @section) %>");
+$('#section-list').prepend("<%= escape_javascript render('section', section: @section) %>");
+$('#section-<%= @section.id %>').effect("highlight", {}, 2000);
+$('#section-form').trigger('reset');
