--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,2 +1,5 @@
-  <%= link_to "添加章节", new_course_course_section_path(@course), class: 'btn btn-info pull-right span' %>
+<%= content_for :left do %>
+  <%= render 'profile' %>
+<% end %>
+ <%= link_to "添加章节", new_course_course_section_path(@course), class: 'btn btn-info pull-right span' %>
 
