--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -10,10 +10,13 @@
 <![endif]-->
 
 <%= stylesheet_link_tag "application", :media => "all" %>
+<%= stylesheet_link_tag params[:controller] %>
+
 <!-- Javascripts
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <%= javascript_include_tag "application" %>
+<%= javascript_include_tag params[:controller] %> 
 <!-- For third-generation iPad with high-resolution Retina display: -->
 <!-- Size should be 144 x 144 pixels -->
 <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
