--- a/app/views/me/courses/_form.html.erb
+++ b/app/views/me/courses/_form.html.erb
@@ -5,6 +5,6 @@
   <%# f.input :kind_id, :label => t('kind'), :collection => Group.Kinds, :include_blank => false, :required => true %>
   <%= f.input :body, label: '简介' %>
   <div class="actions">
-    <%= f.submit '创建', :class=>'btn btn-primary' %>
+    <%= f.submit '创建', :class=>'btn btn-primary', disable_with: "正在提交..." %>
   </div>
 <% end %>
