--- a/app/views/layouts/webclass.html.erb
+++ b/app/views/layouts/webclass.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class='span-r'>
-          <%= render 'course/nav' %>
+          <%= render 'webclass/menu' %>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
