--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -8,12 +8,11 @@
     <div id="page" class="container">
       <div class="row">
         <div class='span-l'>
-          <div class='avatar'><%= link_to image_tag(avatar_url(@group, 'b')), @group %></div>
-          <h4><%= @group.name %></h4>
+          <%= yield :left %>
         </div>
 
         <div class='span-r'>
-          <%= render 'group/nav' %>
+          <%= render 'group/menu' %>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
