--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -166,6 +166,13 @@ ul.inline > li, ol.inline > li {
     border-color: transparent #E3EAF2 transparent transparent;
 }
 
+.feature {
+    margin-top: 30px;
+}
+
+.feature td{
+    padding: 10px;
+}
 
 .footer{
     font-size:12px;
