--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,17 +1,17 @@
-<div id='page-right'>
+<div class='span6'>
   <h3>注册好班级</h3>
 
   <%= simple_form_for(resource, :as => resource_name, validate: true, :url => registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
-    <%= f.input :email, :autofocus => true, label: '邮箱', :validate => { :presence => true } %>
-    <%= f.input :nickname, label: '昵称', :validate => { :presence => true } %>
-    <%= f.input :password, label: '密码', :validate => { :presence => true } %>
-    <%= f.input :password_confirmation, label: '重复密码', :validate => { :presence => true } %>
+    <%= f.input :email, :autofocus => true, label: '邮箱' %>
+    <%= f.input :nickname, label: '昵称' %>
+    <%= f.input :password, label: '密码' %>
+    <%= f.input :password_confirmation, label: '重复密码' %>
     <%= f.button :submit, "注 册" %>
   <% end %>
 </div>
 
-<div id='page-left'>
+<div class='span4'>
   <h3>利用社交网络登录</h3>
 </div>
 
