--- a/app/views/webclass/settings/_menu.html.erb
+++ b/app/views/webclass/settings/_menu.html.erb
@@ -2,7 +2,9 @@
   <div class='span2'>
     <%= tabs_tag(:namespace => :course_admin_nav, :open_tabs => {:class => "nav nav-tabs nav-stacked"}, :builder =>     MenuTabBuilder) do |tab| %>
       <%= tab.index "基本设置", webclass_webclass_settings_path(@current_webclass) %>
-      <%= tab.categories "分类管理", admin_course_course_categories_path(@current_webclass) %>
+      <%= tab.categories "分类管理", admin_webclass_webclass_categories_path(@current_webclass) %>
+      <%= tab.categories "课时管理", admin_webclass_webclass_slots_path(@current_webclass) %>
+      <%= tab.categories "课程管理", admin_webclass_webclass_courses_path(@current_webclass) %>
       <%= tab.folders "目录管理", admin_webclass_webclass_folders_path(@current_webclass) %>
       <%= tab.members "学员管理", admin_webclass_webclass_members_path(@current_webclass) %>
     <% end %>
