--- a/app/views/webclass/courses/_form.html.erb
+++ b/app/views/webclass/courses/_form.html.erb
@@ -1,6 +1,6 @@
-<%= simple_form_for @slot, url: webclass_webclass_courses_path(@current_webclass), validate: true, remote: true, :html => {:class => 'form-horizontal', id: 'slot-form', data: {type: "script", method: :post}} do |f| %>
+<%= simple_form_for @course, url: webclass_webclass_courses_path(@current_webclass), validate: true, remote: true, :html => {:class => 'form-horizontal', id: 'slot-form', data: {type: "script", method: :post}} do |f| %>
   <%= f.input :name, label: '名称' %>
   <%= f.input :week, as: :radio_buttons, :item_wrapper_class => 'inline', collection: weeks, label: '周时' %>
-  <%= f.association :section, as: :radio_buttons, label: '课时', :item_wrapper_class => 'inline', collection: @sections %>
+  <%= f.association :sections, as: :check_boxes, label: '课时', :item_wrapper_class => 'inline', collection: @sections %>
   <%= f.button :submit, value: '添加课程', class: 'btn btn-info' %>
 <% end %>
