--- a/app/views/webclass/courses/create.js.erb
+++ b/app/views/webclass/courses/create.js.erb
@@ -1,3 +1,5 @@
-$('#week<%= @slot.week %>-section<%= @slot.section_id %>').html("<%= escape_javascript render('slot', slot: @slot) %>");
-$('#week<%= @slot.week %>-section<%= @slot.section_id %>').effect("highlight", {}, 2000);
+<%- @slots.each do |slot| %>
+  $('#week<%= slot.week %>-section<%= slot.section_id %>').html("<%= escape_javascript render('slot', slot: slot) %>");
+  $('#week<%= slot.week %>-section<%= slot.section_id %>').effect("highlight", {}, 2000);
+<% end %>
 $('#slot-form').trigger('reset');
