--- a/app/views/webclass/members/_member.html.erb
+++ b/app/views/webclass/members/_member.html.erb
@@ -4,8 +4,19 @@
   <td><%= member.role_name %></td>
   <td><%= format_datetime member.created_at %></td>
   <td>
-    <%= link_to '关注', follow_user_path(member.user_id), class: 'pull-left btn btn-success btn-small' %>
-    <%= link_to '修改角色', follow_user_path(member.user_id), class: 'pull-left span btn btn-info btn-small' %>
-    <%= link_to '发送信息', follow_user_path(member.user_id), class: 'pull-left span btn btn-primary btn-small' %>
+    <%- if current_user.has_role? :admin, @current_webclass %>
+      <p>
+        <%= link_to '修改角色', follow_user_path(member.user_id), class: 'btn btn-info btn-small' %>
+        &nbsp; &nbsp;
+        <%= link_to '删除', follow_user_path(member.user_id), class: 'btn btn-warning btn-small' %>
+      </p>
+    <% end %>
+    <%- if current_user.has_role? :member, @current_webclass %>
+      <p>
+        <%= link_to '发送信息', follow_user_path(member.user_id), class: 'btn btn-success btn-small' %> 
+        &nbsp; &nbsp;
+        <%= link_to '关注', follow_user_path(member.user_id), class: 'btn btn-primary btn-small' %>
+      </p>
+    <% end %>
   </td>
 </tr>
