--- a/app/views/webclass/messages/new.html.erb
+++ b/app/views/webclass/messages/new.html.erb
@@ -1,12 +1,12 @@
 <div class='row'>
   <div class='span-l'>
-    <%- if @apply_members.size > 0 %>
-      <h4>有<%= @apply_members.size %>位成员申请加入</h4>
-      <%= render 'apply_members' %>
-    <% end %>
+    <h4>写信</h4>
     
+    <%= render 'form' %>
+
   </div>
   <div class='span-r pull-right'>
+    <%= render 'menu' %>
   </div>
 </div>
 
