--- a/app/views/webclass/messages/sendout.html.erb
+++ b/app/views/webclass/messages/sendout.html.erb
@@ -1,17 +1,17 @@
 <div class='row'>
   <div class='span-l'>
-    <h4>我收到信件</h4>
+    <h4>已发送的信件</h4>
     <table class='table'>
       <thead>
         <tr class="success">
-          <th>发件人</th>  
+          <th>收件人</th>  
           <th>标题</th>
           <th>发送时间</th>
           <th>操作</th>
         </tr>
       </thead>
       <tbody id='message-list'>
-        <%= render partial: 'inbox_messages', collection: @messages %>
+        <%= render partial: 'outbox_messages', collection: @messages, as: :message %>
       </tbody>
     </table>
 
