user can reply message

--- a/app/assets/stylesheets/webclass/messages.css.scss
+++ b/app/assets/stylesheets/webclass/messages.css.scss
@@ -1,3 +1,10 @@
 /*
  *= require mutil_select/css/multi-select
 */
+
+.custom-header {
+    background: none repeat scroll 0 0 #eee;
+    color: #222;
+    padding: 3px;
+    text-align: center;
+}
