--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -1,3 +1,8 @@
+h4.border {
+    border-bottom: 1px solid #AAAAAA;
+    padding-bottom: 6px;
+    padding-top: 6px;
+}
 .item .line{
     border-bottom: dashed 1px #ccc;
     margin-top: 1px;
@@ -28,6 +33,21 @@
     font-weight: bold;
     float: left;
     height: 25px;
+}
+
+.item-info {
+    background-color: #D9EDF7;
+    border-color: #BCE8F1;
+    color: #3A87AD;
+}
+
+.item {
+    background-color: #FCF8E3;
+    border: 1px solid #FBEED5;
+    border-radius: 4px 4px 4px 4px;
+    margin-bottom: 20px;
+    padding: 5px;
+    margin-bottom: 10px;
 }
 
 div.field_with_errors .message {
@@ -79,8 +99,8 @@ div.field_with_errors, div.ui-effects-wrapper {
     background-color: #DFF0D8;
 }
 
-td{
-    vertical-align: top;
+.table th, .table td {
+    vertical-align: middle;
 }
 
 a {
