--- a/app/views/webclass/messages/_inbox_messages.html.erb
+++ b/app/views/webclass/messages/_inbox_messages.html.erb
@@ -1,6 +1,6 @@
 <tr id='message-<%= message.id %>'>
-  <td><%= message.sender.nickname %></td> 
-  <td><%= message.title %> </td>
+  <td><%=link_to message.recipient.nickname,  message.recipient %></td> 
+  <td><%=link_to message.title, [:webclass, @current_webclass, message] %> </td>
   <td><%= format_datetime message.created_at %> </td>
   <td></td>
 </tr>
