--- a/app/views/webclass/messages/_reply_form.html.erb
+++ b/app/views/webclass/messages/_reply_form.html.erb
@@ -1,9 +1,10 @@
-<%= simple_form_for Message.new(parent_id: @message.id, member: @message.sender.member(@current_webclass)), url: webclass_webclass_messages_path(@current_webclass), :html => {:class => 'form-stacked'}, validate: true do |f| -%> 
+<h4 class='border'></h4>
+<%= simple_form_for Message.new(parent_id: @message.id, recipient_id: @message.recipient_id == current_user.id ? @message.sender_id : current_user.id, title: @message.title), url: url, remote: true, validate: true, :html => {id: 'reply-form', data: {type: "script"}} do |f| -%> 
   <%= f.error_notification %>
-  <%= f.hidden_field :parent_id %>
-  <%= f.association :member %>
-  <%= f.input :title, :class=>'xlarge', :label => '标题' %>
-  <%= f.input :body, label: '内容' %>
+  <%= f.input :parent_id, as: :hidden %>
+  <%= f.association :recipient, as: :hidden %>
+  <%= f.input :title, as: :hidden %>
+  <%= f.input :body, label: '直接回复' %>
   <div class="actions">
     <%= f.submit '创建', :class=>'btn btn-primary', disable_with: "正在提交..." %>
   </div>
