--- a/app/views/webclass/messages/index.html.erb
+++ b/app/views/webclass/messages/index.html.erb
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody id='message-list'>
-        <%= render partial: 'inbox_messages', collection: @messages %>
+        <%= render partial: 'inbox_messages', collection: @messages, as: :message %>
       </tbody>
     </table>
 
