--- a/app/views/webclass/messages/show.html.erb
+++ b/app/views/webclass/messages/show.html.erb
@@ -1,27 +1,11 @@
 <div class='row'>
   <div class='span-l'>
-    <table class='table'>
-      <tbody>
-        <tr class='warning'>
-          <td>发件人: <%= @message.sender.nickname %></td>
-          <td>收件人: <%= @message.sender.nickname %></td>
-          <td>发送时间: <%= format_datetime @message.created_at %></td>
-          <td>附件数量: 0 </td>
-          <td>
-            <%- if @message.sender_id == current_user.id %>
-              <%= link_to '返回发件箱', [:sendout, :webclass, @current_webclass, :messages], class: 'btn btn-success btn-small' %>
-            <% else %>
-              <%= link_to '返回收件箱', [:webclass, @current_webclass, :messages], class: 'btn btn-success btn-small' %>
-            <% end %>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <h3><%= @message.title %></h3>
-    <p>
-      <%= @message.body %>
-    </p>
-    <%= render 'reply_form' %>
+    <h4><%= @message.title %></h4>
+    <%= render partial: 'reply', locals: {message: @message} %>
+    <h4 class='border'>回复列表</h4>
+    <%= render 'replies' %>
+
+    <%= render 'reply_form', url: reply_webclass_webclass_message_path(@current_webclass, @message) %>
   </div>
   <div class='span-r pull-right'>
     <%= render 'menu' %>
