--- a/app/views/layouts/webclass.html.erb
+++ b/app/views/layouts/webclass.html.erb
@@ -8,7 +8,13 @@
     <div id="page" class="container">
       <div class="row">
         <div class='span-l'>
-          <%= yield :left %>
+           <%= avatar_tag(@current_webclass, 'b') %>
+           <h4><%= @current_webclass.name %></h4>
+           <p><%= @current_webclass.body %></p>
+           <h4 class='border'>
+            班主任
+           </h4>
+           <%= user_avatar_tag(@current_webclass.creator, 'm') %>
         </div>
 
         <div class='span-r'>
