--- a/app/views/webclass/messages/_form.html.erb
+++ b/app/views/webclass/messages/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [:webclass, @current_webclass, @message], :html => {:class => 'form-stacked'}, validate: true do |f| -%> 
   <%= f.error_notification %>
-  <%= f.association :recipient, :label => render('contact'), :collection => @group_members, as: :grouped_select, group_method: :members, group_label_method: :name, value_method: :user_id, input_html: {multiple: 'multiple', id: 'recipient_ids'} %>
+  <%= f.association :recipient, :label => render('contacts'), :collection => @group_members, as: :grouped_select, group_method: :members, group_label_method: :name, value_method: :user_id, input_html: {multiple: 'multiple', id: 'recipient_ids'} %>
 
   <%= f.input :title, :class=>'xlarge', :label => '标题' %>
   <%= f.input :body, label: '内容' %>
