--- a/app/views/webclass/messages/_reply.html.erb
+++ b/app/views/webclass/messages/_reply.html.erb
@@ -1,8 +1,15 @@
-<div id='message-<%= message.id %>'>
-  <div class='item item-info clearfix'>
-    来自: <%= message.sender.nickname %>
-    <div class='pull-right text-right'> <%= format_datetime @message.created_at %></div>
+<li id='message-<%= message.id %>'>
+  <div class='avatar'>
+    <%= user_avatar_tag message.sender, 's' %>
   </div>
-  <div class='content'><p><%= message.body %></p></div>
-</div>
-<br />
+  <div class='content'>
+    <div class='item item-info clearfix'>
+      <%= message.sender.nickname %>
+      <span class='time'>
+        <%= format_datetime @message.created_at %>
+      <span>
+   </div>
+   <div class='content'><p><%= message.body %></p></div>
+  </div>
+  <br />
+</li>
