--- a/app/views/webclass/members/_list.html.erb
+++ b/app/views/webclass/members/_list.html.erb
@@ -1,7 +1,22 @@
+<script>
+  function change_role(member_id, role) {  
+    jQuery.ajax({
+      url: "<%= change_role_webclass_webclass_member_path(@current_webclass, 0) %>",
+      type: "GET",
+      dataType: "script",
+      data: {"role" : role, "member_id": member_id},
+      success: function(data) {
+        
+      }
+    });
+  }
+</script>
+
 <table class='table table-bordered'>
   <thead>
     <tr class="success">
       <th width='80'>成员</th>
+      <th>管理员</th>
       <th>姓名</th>  
       <th>角色</th>
       <th>加入时间</th>
@@ -9,6 +24,8 @@
     </tr>
   </thead>
   <tbody id='member-list'>
-    <%= render partial: 'member', collection: @members %>
+    <form>
+      <%= render partial: 'member', collection: @members %>
+    </form>
   </tbody>
 </table>
