--- a/app/assets/stylesheets/webclass/reports.css.scss
+++ b/app/assets/stylesheets/webclass/reports.css.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the webclass/reports controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.span-r .span-l{
+  width: 500px;
+}
+
+.span-r .span-r{
+  width: 415px;
+}
