--- a/app/views/webclass/members/_member_content.html.erb
+++ b/app/views/webclass/members/_member_content.html.erb
@@ -1,8 +1,5 @@
-<table>
-  <%- @members.each do |member| %>
-  <tr>
-
-     <td><%= link_to user_avatar_tag(member.user, 's'), member.user %></td>
+<%= content_tag '' do %>
+ <td><%= link_to user_avatar_tag(member.user, 's'), member.user %></td>
  <td><%= member.name %></td>
  <td></td>
  <td>
@@ -17,6 +14,4 @@
      <%= link_to '设为管理员', [:set_admin, :webclass, @current_webclass, member], disable_with: "更新中...", class: 'btn btn-success', remote: true, data: 'script' %>
    <% end %>
  </td>
- </tr>
-  <% end %>
-</table>
+ <% end %>
